log
Sat 24 Sep 2022 12:13:58 AM UTC: 
 tests:  1|8
total_score: 0/70
8db37c9
Sat 24 Sep 2022 12:34:18 AM UTC: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:18: error: comparison between pointer and integer [-Werror]
   42 |   if (lower_than == 1){
      |                  ^~
treemap.c:43:32: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = createTreeNode(key2, NULL);
      |                                ^~~~
treemap.c:43:32: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:38: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = createTreeNode(key1, NULL);
      |                                      ^~~~
cc1: all warnings being treated as errors
Compilation failed
1256571
Sat 24 Sep 2022 12:34:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:32: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = createTreeNode(key2, NULL);
      |                                ^~~~
treemap.c:43:32: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:38: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = createTreeNode(key1, NULL);
      |                                      ^~~~
Compilation failed
a692086
Sat 24 Sep 2022 12:35:24 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:33: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = createTreeNode(*key2, NULL);
      |                                 ^~~~
treemap.c:43:33: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:39: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = createTreeNode(*key1, NULL);
      |                                       ^~~~
Compilation failed
33c5119
Sat 24 Sep 2022 12:38:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:33: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = createTreeNode(*key2, NULL);
      |                                 ^~~~
treemap.c:43:33: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:39: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = createTreeNode(*key1, NULL);
      |                                       ^~~~
Compilation failed
8d39018
Sat 24 Sep 2022 12:40:54 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:32: error: dereferencing ‘void *’ pointer [-Werror]
   45 |     Map->root = createTreeNode(*key2, NULL);
      |                                ^~~~~
treemap.c:45:32: error: invalid use of void expression
treemap.c:46:38: error: dereferencing ‘void *’ pointer [-Werror]
   46 |     Map->root->left = createTreeNode(*key1, NULL);
      |                                      ^~~~~
treemap.c:46:38: error: invalid use of void expression
treemap.c:50:32: error: dereferencing ‘void *’ pointer [-Werror]
   50 |     Map->root = createTreeNode(*key1, NULL);
      |                                ^~~~~
treemap.c:50:32: error: invalid use of void expression
treemap.c:51:39: error: dereferencing ‘void *’ pointer [-Werror]
   51 |     Map->root->right = createTreeNode(*key2, NULL);
      |                                       ^~~~~
treemap.c:51:39: error: invalid use of void expression
cc1: all warnings being treated as errors
Compilation failed
5c31beb
Sat 24 Sep 2022 12:41:10 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:17: error: ‘key2’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   45 |     Map->root = createTreeNode(key2, NULL);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:46:23: error: ‘key1’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   46 |     Map->root->left = createTreeNode(key1, NULL);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a760100
Sat 24 Sep 2022 02:27:58 AM UTC: 
 treemap.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  4|7
total_score: 5/70
4993d1f
Sat 24 Sep 2022 02:28:28 AM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  11|6
total_score: 15/70
5f3ed53
Sat 24 Sep 2022 03:01:50 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
f68cd7b
Sun 25 Sep 2022 10:56:51 PM UTC: 
 tests:  11|6
total_score: 15/70
e78b9f9
Sun 25 Sep 2022 11:18:57 PM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:51:11: error: expected identifier or ‘(’ before ‘->’ token
   51 |   TreeNode->current = x;
      |           ^~
treemap.c:52:6: error: expected expression before ‘TreeNode’
   52 |   if(TreeNode->current->left == NULL){
      |      ^~~~~~~~
treemap.c:56:12: error: expected expression before ‘TreeNode’
   56 |     while (TreeNode->current->left != NULL){
      |            ^~~~~~~~
treemap.c:57:15: error: expected identifier or ‘(’ before ‘->’ token
   57 |       TreeNode->current = Tree->current->left;
      |               ^~
treemap.c:59:12: error: expected expression before ‘TreeNode’
   59 |     return TreeNode->current;
      |            ^~~~~~~~
treemap.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5d3ffd4
Sun 25 Sep 2022 11:20:41 PM UTC: 
 treemap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:52:6: error: ‘TreeNode’ has no member named ‘current’
   52 |   new->current = x;
      |      ^~
treemap.c:53:9: error: ‘TreeNode’ has no member named ‘current’
   53 |   if(new->current->left == NULL){
      |         ^~
treemap.c:57:15: error: ‘TreeNode’ has no member named ‘current’
   57 |     while (new->current->left != NULL){
      |               ^~
treemap.c:58:10: error: ‘TreeNode’ has no member named ‘current’
   58 |       new->current = new->current->left;
      |          ^~
treemap.c:58:25: error: ‘TreeNode’ has no member named ‘current’
   58 |       new->current = new->current->left;
      |                         ^~
treemap.c:60:15: error: ‘TreeNode’ has no member named ‘current’
   60 |     return new->current;
      |               ^~
treemap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8255e8b
Sun 25 Sep 2022 11:22:37 PM UTC: 
 treemap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  13|5
total_score: 15/70
074bd0c
